syntax = "proto3";

package orders;

import 'common.proto';
import "google/protobuf/timestamp.proto";

service OrdersService {
  rpc CreateOrders (CreateOrdersRequest) returns (CreateOrdersResponse);
  rpc GetAllOrders (GetAllOrdersRequest) returns (GetAllOrdersResponse);
  rpc GetOrder (GetOrderRequest) returns (OrderResponse);
  rpc UpdateOrder (UpdateOrderRequest) returns (OrderResponse);
}

message Order {
  optional int32 id = 1;
  int32 user_id = 2;
  string cad_num = 3;
  optional string rosreestr_order_num = 4;
  string recipient_name = 5;
  optional int32 rosreestr_user_id = 6;
  optional string status = 7;
  optional bool is_complete = 8;
  optional string comment = 9;
  optional google.protobuf.Timestamp rosreestr_registration_started_at = 10;
  optional google.protobuf.Timestamp rosreestr_registered_at = 11;
  optional google.protobuf.Timestamp completed_at = 12;
  optional google.protobuf.Timestamp createdAt = 13;
  optional google.protobuf.Timestamp updatedAt = 14;
}

message GetAllOrdersRequest {}
message GetAllOrdersResponse {
  repeated Order data = 1;
  optional common.Error error = 2;
}

message CreateOrdersRequest {
  repeated Order orders = 1;
}
message CreateOrdersResponse {
  repeated Order data = 1;
  optional common.Error error = 2;
}

message GetOrderRequest {
  int32 id = 1;
}
message OrderResponse {
  optional Order order = 1;
  optional common.Error error = 2;
}

message UpdateOrderRequest {
  int32 id = 1;
  optional string rosreestr_order_num = 2;
  optional string recipient_name = 3;
  optional int32 rosreestr_user_id = 4;
  optional string status = 5;
  optional bool is_complete = 6;
  optional string comment = 7;
  optional google.protobuf.Timestamp rosreestr_registration_started_at = 8;
  optional google.protobuf.Timestamp rosreestr_registered_at = 9;
  optional google.protobuf.Timestamp completed_at = 10;
}
